@@ -1,6 +1,11 @@
 # ChangeLog for dev-ml/ANSITerminal
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/ANSITerminal/ChangeLog,v 1.2 2009/09/28 16:21:37 betelgeuse Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/ANSITerminal/ChangeLog,v 1.3 2012/03/28 13:00:59 aballier Exp $
+
+*ANSITerminal-0.6 (28 Mar 2012)
+
+  28 Mar 2012; Alexis Ballier <aballier@gentoo.org> +ANSITerminal-0.6.ebuild:
+  version bump
 
   28 Sep 2009; Petteri Räty <betelgeuse@gentoo.org>
   ANSITerminal-0.3.ebuild:
